--- a/env/prd/kustomization.yaml
+++ b/env/prd/kustomization.yaml
@@ -1,5 +1,10 @@
 resources:
 - ../../base
-patchesStrategicMerge:
-- deployment.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 namePrefix: prd-
+patches:
+- path: deployment.yaml
+- path: route-app.yaml
+
+namespace: surote-demo
