--- a/env/dev/kustomization.yaml
+++ b/env/dev/kustomization.yaml
@@ -1,5 +1,6 @@
 resources:
 - ../../base
+- demo-sealed-secret.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namePrefix: dev-
