--- a/env/dev/demo-sealed-secret.yaml
+++ b/env/dev/demo-sealed-secret.yaml
@@ -13,4 +13,4 @@ spec:
       annotations:
         sealedsecrets.bitnami.com/cluster-wide: "true"
       creationTimestamp: null
-      name: mysecret
+      name: dev-mysecret
