--- a/env/dev/kustomization.yaml
+++ b/env/dev/kustomization.yaml
@@ -29,3 +29,6 @@ generatorOptions:
     currently-used-by-kustomize: "true"
 
 namespace: surote-demo-dev
+
+configurations:
+  - configuration/name-reference.yaml
