--- a/env/dev/deployment.yaml
+++ b/env/dev/deployment.yaml
@@ -10,5 +10,7 @@ spec:
       - name: surote-py-header
         image: surote/py-http-echo
         envFrom:
+        - secretRef:
+            name: dev-mysecret
         - configMapRef:
-              name: sealed-secret-trigger
+            name: sealed-secret-trigger
