--- a/env/dev/route-app.yaml
+++ b/env/dev/route-app.yaml
@@ -7,4 +7,4 @@ spec:
     kind: Service
     name: dev-svc-surote-py-header
     weight: 100
-  host: rt-dev-surote-py-header.apps.4smz6.dynamic.opentlc.com
+  host: rt-dev-surote-py-header.apps.x74v2.dynamic.opentlc.com
