--- a/env/dev/deployment.yaml
+++ b/env/dev/deployment.yaml
@@ -7,10 +7,10 @@ spec:
   template:
     spec:
       containers:
-      - name: surote-py-header
-        image: quay.io/rh_ee_swongpai/py-http-header:v0.0.4
-        envFrom:
-        - secretRef:
-            name: demo-kus
-        - configMapRef:
-            name: sealed-secret-trigger
+        - name: surote-py-header
+          image: quay.io/rh_ee_swongpai/py-http-header:739d8271d90fab22ec7cd3db0cecbc9cdf5a0416
+          envFrom:
+            - secretRef:
+                name: demo-kus
+            - configMapRef:
+                name: sealed-secret-trigger
